welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:9: error: not found: value prendreBiscuit
        	prendreBiscuit(); recule(i);
                ^