welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() { 
        var i:Int=0
        while (!estSurBiscuit()) {
        	avance(); i=i+1;
        };
        if (estSurBiscuit()) {
        	prendreBiscuit(); recule(i);
        }
        }

        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }

